[gd_scene load_steps=5 format=3 uid="uid://bney3d5gxpja0"]

[ext_resource type="Texture2D" uid="uid://ctvnm35osdjdw" path="res://Texture/default_inventory_background.png" id="1_iusal"]
[ext_resource type="Script" path="res://Script/inventory.gd" id="1_x0p43"]
[ext_resource type="Texture2D" uid="uid://0pb2wwnieonn" path="res://Texture/item_slot_default_background.png" id="2_8xnu6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bavgi"]
texture = ExtResource("2_8xnu6")

[node name="Inventory" type="Node2D"]
script = ExtResource("1_x0p43")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 81.0
offset_top = 32.0
offset_right = 254.0
offset_bottom = 144.0
texture = ExtResource("1_iusal")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 127.0
offset_top = 69.0
offset_right = 209.0
offset_bottom = 119.0
theme_override_constants/h_separation = 14
theme_override_constants/v_separation = 12
columns = 3

[node name="0" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bavgi")

[node name="1" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bavgi")

[node name="2" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bavgi")

[node name="3" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bavgi")

[node name="4" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bavgi")

[node name="5" type="Panel" parent="GridContainer"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bavgi")

[connection signal="gui_input" from="GridContainer/0" to="." method="_on_1_gui_input"]
[connection signal="gui_input" from="GridContainer/1" to="." method="_on_2_gui_input"]
[connection signal="gui_input" from="GridContainer/2" to="." method="_on_3_gui_input"]
[connection signal="gui_input" from="GridContainer/3" to="." method="_on_4_gui_input"]
[connection signal="gui_input" from="GridContainer/4" to="." method="_on_5_gui_input"]
[connection signal="gui_input" from="GridContainer/5" to="." method="_on_6_gui_input"]
